# cashocs

./: .coverage  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .zenodo.json  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.md  README.rst  SECURITY.md  build_docs.sh  build_pypi.sh  cashocs-convert  codecov.yml  conda_env.yml  data.json  environment.yml  history.txt  mesh-convert  mesh-convert_meshio3  mwe_qual.py  pyproject.toml  pyproject.toml.orig  setup.cfg  setup.py  setup.sh  test_cashocs.sh
.docker/: Dockerfile
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  ci-cd.md  development-related-matters.md  documentation.md  feature_request.md  question---support-request.md
.github/codeql/: codeql-config.yml
.github/conda/: conda.yml  mpich.yml  openmpi.yml
.github/docker/: Dockerfile  Dockerfile.orig
.github/micromamba/: testenv.yml
.github/workflows/: cached_tests.yml  ci.yml  codacy-analysis.yml  codeql-analysis.yml  complete_ci.yml  conda_test.yml  coverage.yml  docker.yml  docker_ci.yml  docker_ghcr.yml  docker_image.yml  fast_ci.yml  linux_ci.yml  macos_ci.yml  micromamba.yml  mpi_tests.yml  ossar-analysis.yml  publish.yml  pypi.yml  scorecard.yml  test_demos.yml  test_demos.yml.orig  tests.yml  tests_macos.yml  tests_macos.yml.orig  tests_parallel.yml  tests_parallel.yml.orig  tests_serial.yml  tests_serial.yml.orig  ubuntu_ci.yml
adoptpy/: __init__.py  _forms.py  documentation.md  geometry.py  nonlinear_solvers.py  optimization_problem.py  utils.py
adoptpy/_optimal_control/: cost_functional.py  line_search.py  optimal_control_problem.py  optimization_algorithm.py
adoptpy/_pde_problems/: __init__.py  adjoint_problem.py  gradient_problem.py  hessian_problem.py  semi_smooth_hessian.py  shape_gradient_problem.py  state_problem.py  unconstrained_hessian_problem.py
adoptpy/_shape_optimization/: regularization.py  shape_cost_functional.py  shape_line_search.py  shape_optimization_algorithm.py  shape_optimization_problem.py
adpack/: __init__.py  _forms.py  forms.py  geometry.py  helpers.py  nonlinear_solvers.py  save_config.ini
adpack/_optimal_control/: __init__.py  cost_functional.py  line_search.py  optimal_control_problem.py  optimization_algorithm.py
adpack/_pde_problems/: adjoint_problem.py  gradient_problem.py  (+5 more)
caospy/: __init__.py  _forms.py  geometry.py  nonlinear_solvers.py  optimization_problem.py  utilities.py
cashocs/: __init__.py  __init__.py.orig  _exceptions.py  _forms.py  _loggers.py  _optimization_algorithm.py  _typing.py  config.py  documentation.md  geometry.py  log.py  mpi.py  nonlinear_solvers.py  optimization_problem.py  output.py  types.py  utils.py  verification.py
cashocs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cashocs_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cestrel/: __init__.py  _exceptions.py  _forms.py  documentation.md  geometry.py  nonlinear_solvers.py  optimization_problem.py  utils.py  verification.py
demos/: config.ini  doc_demos.py  mwe_meshqual.py  taylor_test.py  test.py  test_mpi.py  tutorial.py
descendal/: __init__.py  _forms.py  documentation.md  geometry.py  nonlinear_solvers.py  optimization_problem.py  utils.py
docker/: Dockerfile
docs/: doc_demos.html  geometry.html  index.html  index.js  nonlinear_solvers.html  optimization_problem.html  requirements.txt  utilities.html  utils.html  verification.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0345ef2e107e5a21___init___py.html  z_0345ef2e107e5a21_armijo_line_search_py.html  z_0345ef2e107e5a21_basic_line_search_py.html  z_0345ef2e107e5a21_line_search_py.html  z_0345ef2e107e5a21_polynomial_line_search_py.html  z_1d41f265c3366bfa___init___py.html  z_1d41f265c3366bfa_forms_py.html  z_1d41f265c3366bfa_helpers_py.html  z_1d41f265c3366bfa_interpolations_py.html  z_1d41f265c3366bfa_linalg_py.html  z_299c5c5c9d7689c6___init___py.html  z_299c5c5c9d7689c6_linear_solver_py.html  z_299c5c5c9d7689c6_newton_solver_py.html  z_299c5c5c9d7689c6_picard_solver_py.html  z_299c5c5c9d7689c6_snes_py.html  z_299c5c5c9d7689c6_ts_py.html  z_3345f743571c4583___init___py.html  z_3345f743571c4583_shape_optimization_problem_py.html  z_3345f743571c4583_shape_variable_abstractions_py.html  z_3e34f79d4b2e0e9d___init___py.html  z_3e34f79d4b2e0e9d_adjoint_problem_py.html  z_3e34f79d4b2e0e9d_control_gradient_problem_py.html  z_3e34f79d4b2e0e9d_hessian_problems_py.html  z_3e34f79d4b2e0e9d_pde_problem_py.html  z_3e34f79d4b2e0e9d_shape_gradient_problem_py.html  z_3e34f79d4b2e0e9d_state_problem_py.html  z_441e2a1d43e8a1a4___init___py.html  z_441e2a1d43e8a1a4_boundary_distance_py.html  z_441e2a1d43e8a1a4_deformations_py.html  z_441e2a1d43e8a1a4_measure_py.html  z_441e2a1d43e8a1a4_mesh_handler_py.html  z_441e2a1d43e8a1a4_mesh_py.html  z_441e2a1d43e8a1a4_mesh_testing_py.html  z_441e2a1d43e8a1a4_quality_py.html  z_55ebf4b807a85bcc___init___py.html  z_55ebf4b807a85bcc_constrained_problems_py.html  (+53 more)
public/: optimization_problem.html  utils.html
tests/: .coverage  config_ocp.ini  config_ocsm.ini  config_picard.ini  config_remesh.ini  config_sop.ini  config_sosm.ini  config_top.ini  conftest.py  history.json  history.txt  optimized_mesh.msh  reentry_script_remeshing.py  remeshing_script.py  test_cli.py  test_config.ini  test_config.py  test_control_constraints.py  test_exceptions.py  test_fieldsplit.py  test_geometry.py  test_input_handling.py  test_log_level.py  test_mesh_constraints.py  test_mesh_quality_constraints.py  test_nonlinear_solvers.py  test_optimal_control.py  test_optimal_control_multiple.py  test_optimal_control_space_mapping.py  test_output.py  test_p_laplacian.py  test_pde_problems.py  test_picard_iterations.py  test_projection_cantilever.py  test_projection_general.py  test_remeshing.py  test_remeshing_parallel.py  test_shape_constraints.py  test_shape_optimization.py  test_shape_optimization_space_mapping.py  (+3 more)
(+1337 files in other folders)
