[build-system]
requires = [
    "setuptools>=51",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
skip_gitignore = "True"
line_length = 88
force_single_line = "True"
single_line_exclusions = ["typing"]
lexicographical = "True"
force_sort_within_sections = "True"
order_by_type = "False"
group_by_package = "True"
known_first_party = ["cashocs"]
known_third_party = ["fenics", "ufl", "numpy"]

[tool.pydocstyle]
convention = "google"
match_dir = "cashocs/"

[tool.coverage.run]
source = ["cashocs"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise _exceptions.InputError",
    "raise _exceptions.CashocsException",
    "raise _exceptions.CashocsDebugException",
    "_loggers.warning",
    "abstractmethod",
]