[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cashocs"
version = "2.1.0"
description = "Computational Adjoint-Based Shape Optimization and Optimal Control Software"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
authors = [
	{name = "Sebastian Blauth"},
	{email = "sebastian.blauth@itwm.fraunhofer.de"}
]
keywords = [
	"Shape Optimization",
	"Optimal Control",
	"FEniCS",
	"Optimization",
	"PDE",
	"Adjoint",
	"Finite Element Method"
]
classifiers = [
	"Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
dependencies = [
	"meshio >= 4.1.0",
	"numpy",
	"typing_extensions",
        "matplotlib",
]

[project.urls]
Documentation = "https://cashocs.readthedocs.io/en/stable"
Source = "https://github.com/sblauth/cashocs"
Tutorial = "https://cashocs.readthedocs.io/en/stable/user"
Tracker = "https://github.com/sblauth/cashocs/issues"

[project.scripts]
cashocs-convert = "cashocs._cli:convert"
cashocs-extract_mesh = "cashocs._cli:extract_mesh"

[project.optional-dependencies]
tests = [
	"pytest",
	"pytest-randomly",
	"pytest-cov",
	"pytest-xdist",
	"pytest-timeout",
	"pytest-icdiff"
]
docs = [
	"sphinx",
	"pydata-sphinx-theme",
	"sphinx-argparse",
	"sphinx-copybutton",
	"sphinx-design",
    "jupytext",
    "myst-parser"
]
all = ["cashocs[tests,docs]"]

[tool.setuptools.packages]
find = {}

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
skip_gitignore = "True"
line_length = 88
force_single_line = "True"
single_line_exclusions = ["typing"]
lexicographical = "True"
force_sort_within_sections = "True"
order_by_type = "False"
group_by_package = "True"
known_first_party = ["cashocs"]
known_third_party = ["fenics", "ufl", "numpy"]

[tool.pydocstyle]
convention = "google"
match_dir = "cashocs/"

[tool.coverage.run]
source = ["cashocs"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise _exceptions.InputError",
    "raise _exceptions.CashocsException",
    "raise _exceptions.CashocsDebugException",
    "_loggers.warning",
    "abstractmethod",
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
warn_return_any = true
follow_imports = "normal"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_unimported = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
	"fenics.*",
	"ufl.*",
    "ufl_legacy.*",
	"dolfin.*",
	"petsc4py",
    "mpi4py.*",
	"meshio",
	"h5py",
    "matplotlib.*",
]
ignore_missing_imports = true
