[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "cashocs"
version = "2.7.3"
description = "Computational Adjoint-Based Shape Optimization and Optimal Control Software"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
authors = [
	{name = "Sebastian Blauth"},
	{email = "sebastian.blauth@itwm.fraunhofer.de"}
]
keywords = [
	"Shape Optimization",
	"Optimal Control",
	"FEniCS",
	"Optimization",
	"PDE",
	"Adjoint",
	"Finite Element Method"
]
classifiers = [
	"Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
dependencies = [
    "meshio >= 4.1.0",
    "numpy",
    "scipy >= 1.10.0",
    "typing_extensions",
    "matplotlib",
]

[project.urls]
Documentation = "https://cashocs.readthedocs.io/en/stable"
Source = "https://github.com/sblauth/cashocs"
Tutorial = "https://cashocs.readthedocs.io/en/stable/user"
Tracker = "https://github.com/sblauth/cashocs/issues"

[project.scripts]
cashocs-convert = "cashocs._cli:convert"
cashocs-extract_mesh = "cashocs._cli:extract_mesh"

[project.optional-dependencies]
tests = [
	"pytest",
	"pytest-randomly",
	"pytest-cov",
	"pytest-xdist",
	"pytest-timeout",
	"pytest-icdiff"
]
docs = [
	"sphinx",
	"pydata-sphinx-theme",
	"sphinx-argparse",
	"sphinx-copybutton",
	"sphinx-design",
    "jupytext",
    "myst-parser"
]
all = ["cashocs[tests,docs]"]

[tool.setuptools.packages]
find = {}

[tool.isort]
profile = "black"
skip_gitignore = "True"
line_length = 88
force_single_line = "True"
single_line_exclusions = ["typing"]
lexicographical = "True"
force_sort_within_sections = "True"
order_by_type = "False"
group_by_package = "True"
known_first_party = ["cashocs"]
known_third_party = ["fenics", "ufl", "numpy"]

[tool.coverage.run]
source = ["cashocs"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise _exceptions.InputError",
    "raise _exceptions.CashocsException",
    "raise _exceptions.CashocsDebugException",
    "log.warning",
    "abstractmethod",
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
warn_return_any = true
follow_imports = "normal"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_unimported = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
	"fenics.*",
	"ufl.*",
    "ufl_legacy.*",
	"dolfin.*",
	"petsc4py",
    "mpi4py.*",
	"meshio",
	"h5py",
    "matplotlib.*",
    "scipy.*",
    "cashocs_extensions.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "E", # pycodestyle error
  "W", # pycodestyle warning
  "D", # pydocstyle
  "C90", # mccabe
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "ANN", # flake8-annotations
  "FA", # flake8-future-annotations
  "LOG", # flake8-logging
  "S", # flake8-bandit
  "NPY", # numpy
  "PD", # pandas-vet
  "FURB", # refurb
  "RUF100",
  "RUF101",
  "RUF200",
]

ignore = [
"ANN401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
