[metadata]
name = cashocs
version = 1.5.5
author = Sebastian Blauth
author_email = sebastian.blauth@itwm.fraunhofer.de
description = Computational Adjoint-Based Shape Optimization and Optimal Control Software
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sblauth/cashocs
project_urls = 
    Source = https://github.com/sblauth/cashocs
    Documentation = https://cashocs.readthedocs.io/en/latest/index.html
    Tutorial = https://cashocs.readthedocs.io/en/latest/tutorial_index.html
    Tracker = https://github.com/sblauth/cashocs/issues
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
description-file = README.rst
license_files = COPYING
keywords = 
    Shape Optimization 
    Optimal Control
    FEniCS
    Optimization
    PDE
    adjoint
    finite element method

[options]
packages = find:
install_requires =
    meshio>=4.1.0
    numpy>=1.21
    typing_extensions
python_requires = >=3.7


[options.entry_points]
console_scripts =
    cashocs-convert = cashocs._cli:convert
